WIP - more scheduler refactoring

--- a/app/app.less
+++ b/app/app.less
@@ -824,6 +824,10 @@ pre {
     opacity: 1.0 !important;
 }
 
+.opaque-hover:hover * {
+    opacity: 1.0 !important;
+}
+
 .thin-nav-button {
     margin: 0;
     max-height: 22px;
