--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -88,7 +88,7 @@
     max-height: 32px;
     min-height: 32px;
     padding: 4px;
-    min-width: 200px;
+    min-width: 147px;
     border: 1px solid rgba(158, 158, 158, 0.3);
     overflow: hidden;
     &:hover {
@@ -170,12 +170,11 @@
 }
 
 .selected-schedule-row {
-    background: rgba(179, 229, 252, 0.5) !important;
-    box-shadow: 1px 2px 10px 0 #393939;
-    border-bottom: 1px solid transparent;
+    background: rgba(179, 229, 252, 0.3) !important;
+    // box-shadow: 1px 2px 10px 0 #393939;
     color: #333333;
     &:hover {
-        background-color: rgba(179, 229, 252, 0.7) !important;
+        background-color: rgba(179, 229, 252, 0.5) !important;
     }
 }
 
@@ -192,7 +191,7 @@
 
 .schedule-row-executing-and-selected {
     background:  rgba(78, 175, 80, 0.6);
-    box-shadow: 1px 2px 10px 0 #393939;
+    // box-shadow: 1px 2px 10px 0 #393939;
     border-bottom: 1px solid transparent;
     color: #333333;
     .manual-color {
