final refactoring work commit

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -143,7 +143,7 @@
 .schedule-item-date-input {
     margin-left: 5px;
     margin-top: 4px;
-    width: 140px !important;
+    width: 110px;
     background: transparent;
     border: 0;
     margin-right: 3px;
@@ -223,35 +223,8 @@
     color: #333333;
 }
 
-.highlight-script-window-background {
-    //    background-color: #B3E5FC !important;
-}
-
-.highlight-script-window {
-    textarea {
-        background: transparent;
-    }
-}
-
-.highlight-script-window-with-box-shadow {
-    border: 16px solid #B3E5FC !important;
-    box-shadow: 0 2px 40px 0 #000;
-}
-
-.highlight-script-border-bottom {
-    border-bottom: 16px solid #B3E5FC !important;
-    margin-bottom: 0 !important;
-}
-
-.script-window-without-box-shadow {
-    border: 16px solid transparent;
-    box-shadow: none;
-}
-
 .schedule-block-script-window {
     padding: 0;
-    //    background-color: #ECEFF1;
-//    height: 600px;
     overflow: auto;
 
     textarea {
