--- a/app/scheduler/templates/sb-scheduled-list-header.html
+++ b/app/scheduler/templates/sb-scheduled-list-header.html
@@ -1,5 +1,5 @@
 <div class="unselectable list-subheader-title subheader-text" layout="row" layout-align="start end" ng-click="$event.stopPropagation()"
-    style="cursor: default">
+    style="pointer-events: none">
     <span style="width: 130px; padding-left: 12px" class="subheader-text">ID</span>
     <span flex>Description</span>
     <span style="width: 80px">State</span>
