--- a/app/health/health.less
+++ b/app/health/health.less
@@ -501,19 +501,26 @@
 
 .receptor-graphic-svg {
     display: -webkit-inline-box;
-    max-width: 270px;
-    max-height: 270px;
-    min-width: 310px;
-    min-height: 310px;
+    max-width: 190px;
+    max-height: 220px;
+    min-width: 190px;
+    min-height: 220px;
     svg {
-        // transform: scale(0.5) translate(-450px, -670px);
+        transform: scale(0.6) translate(-190px, -160px);
         pointer-events: none;
-        transform: translate(-80px, -40px);
         max-width: 440px;
         max-height: 440px;
         min-width: 440px;
         min-height: 440px;
     }
+}
+
+.receptor-svg-container {
+    border: 5px solid transparent;
+}
+
+.receptor-svg-container-faulty {
+    border: 5px solid #F44336;
 }
 
 .receptor-graphic-sensors-nominal {
