--- a/app/widgets/navigation/navigation-widget.less
+++ b/app/widgets/navigation/navigation-widget.less
@@ -29,3 +29,29 @@
     text-anchor: middle;
     text-transform: uppercase;
 }
+
+.nav-widget-button-container {
+    min-height: 100%;
+    .md-button {
+        margin: 2px 0 0 0;
+        border-radius: 0;
+        position: relative;
+        span:not(.fa) {
+            padding: 0 4px;
+            margin-left: -46px;
+        }
+        span.fa {
+            font-size: 36px;
+            margin-left: 10px;
+        }
+    }
+}
+
+.nav-widget-container {
+    min-width: 280px;
+    min-height: 100%;
+    md-toolbar {
+        text-align: center;
+        font-size: 20px;
+    }
+}
