first commit for removing angular-dashboard-framework

--- a/app/widgets/navigation/navigation-widget.less
+++ b/app/widgets/navigation/navigation-widget.less
@@ -31,25 +31,27 @@
 }
 
 .nav-widget-button-container {
-    min-height: 100%;
     .md-button {
         margin: 2px 0 0 0;
         border-radius: 0;
         position: relative;
+        text-align: start;
         span:not(.fa) {
             padding: 0 4px;
-            margin-left: -46px;
+            margin-left: 6px;
+            font-size: 14px;
         }
         span.fa {
-            font-size: 36px;
+            font-size: 30px;
             margin-left: 10px;
+            width: 46px;
         }
     }
 }
 
 .nav-widget-container {
-    min-width: 280px;
-    min-height: 100%;
+    min-width: 300px;
+    height: 270px;
     md-toolbar {
         text-align: center;
         font-size: 20px;
