show units and type of sensors in popup; better layout for sensor info popup

--- a/app/app.less
+++ b/app/app.less
@@ -843,3 +843,8 @@ pre {
     text-overflow: clip;
     overflow: hidden;
 }
+
+.sensor-dialog-details-name {
+    font-style: italic;
+    min-width: 230px;
+}
