--- a/app/app.less
+++ b/app/app.less
@@ -848,3 +848,9 @@ pre {
     font-style: italic;
     min-width: 230px;
 }
+
+.subarray-number {
+    font-size: 24px !important;
+    line-height: 24px;
+    font-weight: bold;
+}
