refactored sensor graph interactive features to perform well enough up to 100000 data points

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -243,3 +243,13 @@ actions-button {
     stroke: transparent;
     stroke-width: 0;
 }
+
+.context-line {
+    pointer-events: none;
+}
+
+.mouse-pos-line {
+    stroke: black;
+    pointer-events: none;
+    stroke-dasharray: 10, 5;
+}
