--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -217,3 +217,13 @@ multi-line-chart {
         padding: 0;
     }
 }
+
+.expanded-sensor-graph-options {
+    min-width: 366px;
+    max-width: 366px;
+}
+
+.hidden-sensor-graph-options {
+    min-width: 30px;
+    max-width: 30px;
+}
