reduce opacity of sensor graph mouse over line

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -249,7 +249,7 @@ actions-button {
 }
 
 .mouse-pos-line {
-    stroke: black;
+    stroke: rgba(0, 0, 0, 0.6);
     pointer-events: none;
     stroke-dasharray: 10, 5;
 }
