reduced min size of navigation widget containers and icon alignment for better flow

--- a/app/widgets/navigation/navigation-widget.less
+++ b/app/widgets/navigation/navigation-widget.less
@@ -43,14 +43,15 @@
         }
         span.fa {
             font-size: 30px;
-            margin-left: 10px;
-            width: 46px;
+            margin-left: 4px;
+            width: 36px;
+            text-align: center;
         }
     }
 }
 
 .nav-widget-container {
-    min-width: 300px;
+    min-width: 225px;
     height: 270px;
     md-toolbar {
         text-align: center;
