WIP - utilisation reporting

--- a/app/app.less
+++ b/app/app.less
@@ -24,6 +24,7 @@
 @import "device-status/device-status";
 @import "instrumental-config/instrumental-config";
 @import "userlogs/userlogs";
+@import "reports/utilisation-report";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
@@ -834,6 +835,11 @@ pre {
 .fixed-width-18 {
     min-width: 18px;
     max-width: 18px;
+}
+
+.fixed-width-300 {
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .sb-time-and-type-div {
