--- a/app/reports/utilisation-report.less
+++ b/app/reports/utilisation-report.less
@@ -7,9 +7,8 @@
 }
 
 .report-section-title-div {
-    min-height: 42px;
-    max-height: 42px;
-    padding: 8px;
+    padding: 8px 8px 0 8px;
     font-size: 18px;
     font-weight: bold;
+    border-bottom: 1px solid rgba(158, 158, 158, 0.7);
 }
