WIP - better layout and titles for sections

--- a/app/reports/utilisation-report.less
+++ b/app/reports/utilisation-report.less
@@ -1,6 +1,5 @@
 .report-item {
     padding: 2px 8px;
-    min-height: 24px;
     &:hover {
         background-color: rgba(215, 215, 215, 0.3);
     }
@@ -10,5 +9,9 @@
     padding: 8px 8px 0 8px;
     font-size: 18px;
     font-weight: bold;
-    border-bottom: 1px solid rgba(158, 158, 158, 0.7);
+    background: rgba(127, 127, 127, 0.3);
+}
+
+.light-grey-background-03 {
+    background: rgba(127, 127, 127, 0.3);
 }
