added export to pdf; added schedule block details; layout tweaks

--- a/app/reports/utilisation-report.less
+++ b/app/reports/utilisation-report.less
@@ -12,6 +12,13 @@
     background: rgba(127, 127, 127, 0.3);
 }
 
+.report-section-sub-title-div {
+    padding: 8px 8px 0 8px;
+    font-size: 16px;
+    font-weight: bold;
+    background: rgba(210, 210, 210, 0.3);
+}
+
 .light-grey-background-03 {
     background: rgba(215, 215, 215, 0.2);
 }
