subarray utilisation as tables instead of rows

--- a/app/reports/utilisation-report.less
+++ b/app/reports/utilisation-report.less
@@ -5,6 +5,39 @@
     }
 }
 
+.report-cell-item {
+    min-width: 120px;
+    max-width: 120px;
+    padding: 2px 8px;
+    text-align: center;
+    cursor: auto;
+}
+
+.report-row-value-item {
+    min-width: 120px;
+    max-width: 120px;
+    text-align: right;
+    padding: 2px 8px;
+    border-right: 1px solid rgba(158, 158, 158, 0.5);
+}
+
+.report-column-value-item {
+    min-width: 120px;
+    max-width: 120px;
+    text-align: center;
+    padding: 2px 8px;
+    border-bottom: 1px solid rgba(158, 158, 158, 0.5);
+}
+
+.report-row-column-item {
+    min-width: 120px;
+    max-width: 120px;
+    text-align: right;
+    padding: 2px 8px;
+    border-right: 1px solid rgba(158, 158, 158, 0.5);
+    border-bottom: 1px solid rgba(158, 158, 158, 0.5);
+}
+
 .report-section-title-div {
     padding: 8px 8px 0 8px;
     font-size: 18px;
