WIP - utilisation report as tables

--- a/app/reports/utilisation-report.less
+++ b/app/reports/utilisation-report.less
@@ -1,5 +1,5 @@
 .report-item {
-    padding: 2px 8px;
+    // padding: 2px 8px;
     &:hover {
         background-color: rgba(215, 215, 215, 0.4);
     }
