fix operator control display to display inhibit; mode and sensors_ok values correctly

--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -36,7 +36,7 @@
 
 .receptor-state-div {
     position: relative;
-    background: #259b24;
+    background: #4CAF50;
     color: white;
     min-width: 140px;
     top: 0;
@@ -45,7 +45,12 @@
 }
 
 .receptor-state-div-error {
-    background: #FFC107 !important;
+    background: #F44336 !important;
+    color: black;
+}
+
+.receptor-state-div-warn {
+    background: #FF6F00 !important;
     color: black;
 }
 
@@ -70,4 +75,5 @@
 
 .flash-receptor-state.receptor-stow-state {
     background: #01579b;
+    color: white;
 }
