fix csv download to work with large datasets; added shape-rendering: optimiseSpeed to svg element

--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -33,7 +33,10 @@
 
 .line {
     fill: none !important;
-    stroke-width: 1.5px;
+    // if we set the stroke-width > 1px, we do not draw the lines properly
+    // when there is a LOT of datapoints. Not setting this also improves
+    // painting performance a lot
+    // stroke-width: 1.5px;
 }
 
 .dot {
