--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -110,6 +110,27 @@
     }
 }
 
+.pb-view-item {
+    position: relative;
+    height: 38px;
+    max-height: 38px;
+    font-size: 12px;
+    white-space: nowrap;
+    direction: ltr;
+    border: 1px solid rgba(158, 158, 158, 0.3);
+    padding: 0 8px;
+    &:hover {
+        background-color: rgba(158, 158, 158, 0.1);
+    }
+    .pb_id {
+        font-size: 14px;
+        font-weight: bold;
+    }
+    .owner {
+        font-style: italic;
+    }
+}
+
 .md-virtual-repeat-container .md-virtual-repeat-offsetter {
     right: 0;
 }
