--- a/app/scheduler/templates/pb-view-header.html
+++ b/app/scheduler/templates/pb-view-header.html
@@ -1,8 +1,9 @@
 <div class="unselectable list-subheader-title subheader-text" layout="row" layout-align="start end" ng-click="$event.stopPropagation()"
     style="pointer-events: none">
-    <div style="width: 130px; padding-left: 12px" class="subheader-text">PB ID</div>
+    <div style="width: 168px; padding-left: 12px" class="subheader-text">PB ID</div>
     <div flex>Description</div>
-    <div style="width: 80px">State</div>
+    <div style="width: 80px">SB's count</div>
+    <div style="width: 88px">State</div>
     <div style="width: 148px; font-size: 10px">
         <div>Desired LST Start Time</div>
         <div>Desired Start Time</div>
