added a dropdown to select the video feed source

--- a/app/video/video.less
+++ b/app/video/video.less
@@ -14,3 +14,10 @@
     right: 0;
     top: 0;
 }
+
+.vds-source-select {
+    max-width: 200px;
+    min-width: 200px;
+    margin: 0px;
+    padding: 4px;
+}
