--- a/app/scheduler/templates/sb-scheduled-list-header.html
+++ b/app/scheduler/templates/sb-scheduled-list-header.html
@@ -11,5 +11,5 @@
         <span>Type</span>
         <span>Desired Time</span>
     </div>
-    <div style="min-width: 8px" ng-show="vm.subarray && $root.elementHasScrollbar('#scheduleDataRepeat', true)"></div>
+    <!-- <div style="min-width: 8px" ng-show="vm.subarray && $root.elementHasScrollbar('#scheduleDataRepeat', true)"></div> -->
 </div>
