reworked sb update messages to match db triggers used in katportal; updated scheduler views to show obs readiness instead of ready sb attribute

--- a/app/app.less
+++ b/app/app.less
@@ -842,6 +842,14 @@ pre {
     max-width: 300px;
 }
 
+.sb-obs-readiness-div {
+    font-size: 10px;
+    min-width: 150px;
+    max-width: 150px;
+    text-overflow: clip;
+    overflow: hidden;
+}
+
 .sb-time-and-type-div {
     font-size: 10px;
     min-width: 92px;
