--- a/app/scheduler/templates/sb-scheduled-list-header.html
+++ b/app/scheduler/templates/sb-scheduled-list-header.html
@@ -3,8 +3,8 @@
     <span style="width: 130px; padding-left: 12px" class="subheader-text">ID</span>
     <span flex>Description</span>
     <span style="width: 80px">State</span>
-    <div style="width: 97px; font-size: 10px" layout="column">
-        <span>Ready</span>
+    <div style="width: 154px; font-size: 10px" layout="column">
+        <span>Obs Readiness</span>
         <span>Verification State</span>
     </div>
     <div style="width: 148px; font-size: 10px" layout="column">
