--- a/app/scheduler/templates/sb-scheduled-list.html
+++ b/app/scheduler/templates/sb-scheduled-list.html
@@ -19,17 +19,17 @@
         </div>
         <span flex style="overflow: hidden; text-overflow: ellipsis; margin-right: 4px" title="{{item.description}}">{{item.description}}</span>
         <span style="width: 75px">{{item.state}}</span>
-        <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin: 0 4px">
-            <span style="width: 75px" ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
+        <div layout="column" layout-align="center" class="sb-obs-readiness-div" style="margin: 0 4px">
+            <span style="width: 150px" ng-class="{'green-color': item.obs_readiness === 'READY_TO_EXECUTE', 'red-color': item.obs_readiness !== 'READY_TO_EXECUTE'}">{{item.obs_readiness}}</span>
             <span style="width: 150px">{{item.verification_state}}</span>
         </div>
         <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin: 0 4px">
             <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">{{item.type}}</span>
             <span>{{item.desired_start_time}}</span>
         </div>
-        <span ng-show="item.state !== 'ACTIVE' && !item.pendingVerify && !item.ready" style="width: 26px"></span>
+        <span ng-show="item.state !== 'ACTIVE' && !item.pendingVerify && item.obs_readiness !== 'READY_TO_EXECUTE'" style="width: 26px"></span>
         <span class="icon-button fa fa-play green-color" md-ink-ripple ng-disabled="!parent.vm.iAmAtLeastCA()"
-            ng-show="item.state !== 'ACTIVE' && !item.pendingVerify && item.ready" title="Execute" ng-click="parent.vm.iAmAtLeastCA() && parent.vm.executeSchedule(item); $event.stopPropagation()"></span>
+            ng-show="item.state !== 'ACTIVE' && !item.pendingVerify && item.obs_readiness === 'READY_TO_EXECUTE'" title="Execute" ng-click="parent.vm.iAmAtLeastCA() && parent.vm.executeSchedule(item); $event.stopPropagation()"></span>
         <span class="icon-button fa fa-stop red-color" md-ink-ripple ng-disabled="!parent.vm.iAmAtLeastCA()"
             ng-show="item.state === 'ACTIVE' && !item.pendingVerify" title="Stop Execution" ng-click="parent.vm.iAmAtLeastCA() && parent.vm.stopExecuteSchedule(item); $event.stopPropagation()"></span>
         <md-menu md-theme="{{themePrimaryButtons}}">
