--- a/app/scheduler/templates/sb-scheduled-list.html
+++ b/app/scheduler/templates/sb-scheduled-list.html
@@ -4,11 +4,11 @@
         style="padding: 0 4px; z-index: 0" ng-class="{'selected-schedule-row md-whiteframe-z3': item === vm.selectedSchedule}" class="schedule-draft-item"
         layout="row" layout-align="start center" ng-click='vm.setSelectedSchedule(item)'>
 
-        <md-progress-linear md-theme="green" ng-if="item.state === 'ACTIVE'" class="md-primary progress-bar-fill"
+        <md-progress-linear md-theme="green" ng-show="item.state === 'ACTIVE'" class="md-primary progress-bar-fill"
             md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}" value="{{item.progress}}"
             style="position: absolute; left: 0; right: 0; opacity: 0.8;">
         </md-progress-linear>
-        <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
+        <md-progress-linear md-theme="grey" ng-show="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
             md-mode="indeterminate" style="position: absolute; left: 0; right: 0;">
         </md-progress-linear>
         <span title="Priority: {{item.priority}}" style="min-width: 14px; font-size: 14px" class="fa" ng-class="{'fa-arrow-circle-up dark-blue-grey-color': item.priority === 'HIGH', 'fa-arrow-circle-down light-grey-color': item.priority === 'LOW'}"></span>
@@ -27,11 +27,10 @@
             <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">{{item.type}}</span>
             <span>{{item.desired_start_time}}</span>
         </div>
-        <span ng-show="item.state !== 'ACTIVE' && !item.pendingVerify && item.obs_readiness !== 'READY_TO_EXECUTE'" style="width: 26px"></span>
-        <span class="icon-button fa fa-play green-color" md-ink-ripple ng-disabled="!parent.vm.iAmAtLeastCA()"
-            ng-show="item.state !== 'ACTIVE' && !item.pendingVerify && item.obs_readiness === 'READY_TO_EXECUTE'" title="Execute" ng-click="parent.vm.iAmAtLeastCA() && parent.vm.executeSchedule(item); $event.stopPropagation()"></span>
-        <span class="icon-button fa fa-stop red-color" md-ink-ripple ng-disabled="!parent.vm.iAmAtLeastCA()"
-            ng-show="item.state === 'ACTIVE' && !item.pendingVerify" title="Stop Execution" ng-click="parent.vm.iAmAtLeastCA() && parent.vm.stopExecuteSchedule(item); $event.stopPropagation()"></span>
+        <span md-ink-ripple class="icon-button fa" title="{{item.state !== 'ACTIVE'? 'Execute': 'Stop Execution'}}"
+            ng-class="{'fa-play green-color': item.state !== 'ACTIVE' && item.obs_readiness === 'READY_TO_EXECUTE', 'fa-stop red-color': item.state === 'ACTIVE', 'opacity-0': item.state !== 'ACTIVE' && item.obs_readiness !== 'READY_TO_EXECUTE'}"
+            style="min-width: 26px; max-width: 26px"
+            ng-click="item.state === 'ACTIVE'? parent.vm.stopExecuteSchedule(item) : parent.vm.executeSchedule(item); $event.stopPropagation()"></span>
         <md-menu md-theme="{{themePrimaryButtons}}">
             <span class="icon-button fa fa-ellipsis-v" md-ink-ripple ng-click="$mdOpenMenu(); $event.stopPropagation()"></span>
             <md-menu-content style="max-height: 475px">
