--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -2,8 +2,8 @@
     margin: 0;
     text-align: start;
     padding: 4px 8px;
-    max-height: 24px;
-    min-height: 24px;
+    // max-height: 24px;
+    min-height: 32px;
     line-height: 24px;
     font-size: 12px;
 }
@@ -26,8 +26,8 @@
 }
 
 .resource-sensor-name {
-    min-width: 270px;
-    max-width: 270px;
+    min-width: 400px;
+    max-width: 400px;
     max-height: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
