better getting of systemConfig for scheduler displays; added ordering and filtering for program-blocks display; better displaying of setup subarray results

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -112,8 +112,8 @@
 
 .pb-view-item {
     position: relative;
-    height: 38px;
-    max-height: 38px;
+    height: 50px;
+    // max-height: 38px;
     font-size: 12px;
     white-space: nowrap;
     direction: ltr;
@@ -138,6 +138,17 @@
             text-overflow: ellipsis;
             max-width: 160px;
         }
+    }
+
+    .pb-obs-spec-list-item {
+        max-width: 300px;
+        min-width: 300px;
+        margin-right: 8px;
+        word-wrap: break-word;
+        height: 100%;
+        white-space: initial;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 }
 
