added buttons to clone a PB with or without all its SBs; added SB clone into pb and SB move to pb menu items

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -123,8 +123,8 @@
         background-color: rgba(158, 158, 158, 0.1);
     }
     .pb-id-container {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 125px;
+        max-width: 125px;
         overflow: hidden;
         text-overflow: ellipsis;
         margin-right: 8px;
@@ -143,9 +143,9 @@
     .pb-obs-spec-list-item {
         max-width: 300px;
         min-width: 300px;
-        margin-right: 8px;
+        margin: 0 8px;
         word-wrap: break-word;
-        height: 100%;
+        vertical-align: middle;
         white-space: initial;
         text-overflow: ellipsis;
         overflow: hidden;
