added a context menu item on sb's to remove sb's from pb's

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -137,6 +137,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             max-width: 160px;
+            width: 100%;
         }
     }
 
