slight pixel adjustments for chips in userlogs after material upgrade

--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -104,15 +104,9 @@
         line-height: 20px
         height: 20px;
     }
-    .md-chip-input-container {
-        margin: 2px;
-    }
-    md-chips-wrap {
-        padding: 0 2px;
-    }
     md-autocomplete {
-        max-width: 100px !important;
-        min-width: 100px !important;
+        max-width: 120px !important;
+        min-width: 120px !important;
     }
     input {
         font-size: 11px;
@@ -121,5 +115,5 @@
 }
 
 .chips-tag-input-error {
-    border: 2px solid rgba(244, 67, 54, 0.75);
+    border: 2px solid rgba(244, 67, 54, 0.75) !important;
 }
