added dialogs to change sb and pb ordering variables; now displaying the ordering variables inline for scheduled sb's and on the program block view and program block dialog

--- a/app/scheduler/templates/pb-view-header.html
+++ b/app/scheduler/templates/pb-view-header.html
@@ -1,5 +1,7 @@
 <div class="unselectable list-subheader-title subheader-text" layout="row" layout-align="start end" ng-click="$event.stopPropagation()">
-    <div style="width: 134px; font-size: 10px">
+    <span style="line-height: 9px; font-size: 9px; margin-left: -6px; word-break: break-all; width: 16px"
+        class="subheader-text" title="Order of Program Blocks by director_priority, sb_order and sb_sequence">DP Seq Ord</span>
+    <div style="width: 134px; margin-left: 4px; font-size: 10px">
         <div class="subheader-text" ng-click="vm.setPBsOrderBy('pb_id')">
             <span>PB ID</span>
             <span class="fa" style="margin-right: 4px;"
