--- a/app/sensor-list/sensor-list.less
+++ b/app/sensor-list/sensor-list.less
@@ -22,7 +22,6 @@
             background-color: rgba(158, 158, 158, 0.1);
         }
     }
-
 }
 
 .resource-sensor-name {
@@ -56,7 +55,9 @@
     display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
+    min-height: 20px;
     max-height: 20px;
+    width: 100%;
 }
 
 .active-sensor-list-resource {
