--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -118,7 +118,7 @@
     white-space: nowrap;
     direction: ltr;
     border: 1px solid rgba(158, 158, 158, 0.3);
-    padding: 0 8px;
+    padding: 0;
     &:hover {
         background-color: rgba(158, 158, 158, 0.1);
     }
@@ -127,7 +127,7 @@
         max-width: 125px;
         overflow: hidden;
         text-overflow: ellipsis;
-        margin-right: 8px;
+        margin: 0 8px;
         .owner {
             font-style: italic;
         }
@@ -631,4 +631,29 @@
     overflow: auto;
     white-space: pre-wrap;
     border-radius: 0;
+}
+
+.sb-ordering-container {
+    min-width: 14px;
+    max-width: 14px;
+    font-size: 9px;
+
+    div {
+        opacity: 0.6;
+        overflow: hidden;
+        min-height: 10px;
+        text-align: center;
+
+        &:hover {
+            opacity: inherit;
+        }
+    }
+}
+
+.pb-disabled-select {
+    opacity: 0.6;
+    cursor: not-allowed;
+    &:hover {
+        background-color: inherit !important;
+    }
 }
