--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -96,6 +96,27 @@
     }
 }
 
+.pb-schedule-item {
+    z-index: 0;
+    position: relative;
+    font-size: 12px;
+    white-space: nowrap;
+    margin-top: 4px;
+
+    .pb-schedule-item-header {
+        height: 84px;
+        position: relative;
+    }
+}
+.pb-schedule-item-header-title {
+    position: absolute;
+    top: 2px;
+    left: 32px;
+    right: 0;
+    font-size: 18px;
+    // text-align: center;
+}
+
 .schedule-draft-item {
     z-index: 0;
     position: relative;
@@ -133,6 +154,24 @@
         }
         .pb-id {
             font-size: 14px;
+            font-weight: bold;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 160px;
+            width: 100%;
+        }
+    }
+
+    .pb-id-container-big {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin: 0 8px;
+
+        .owner {
+            font-style: italic;
+        }
+        .pb-id {
+            font-size: 16px;
             font-weight: bold;
             overflow: hidden;
             text-overflow: ellipsis;
