WIP - display program blocks in order and display unlinked schedule blocks in scheduler displays

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -101,7 +101,7 @@
     position: relative;
     font-size: 12px;
     white-space: nowrap;
-    margin-top: 4px;
+    margin-top: 8px;
 
     .pb-schedule-item-header {
         height: 84px;
@@ -112,9 +112,9 @@
     position: absolute;
     top: 2px;
     left: 32px;
-    right: 0;
+    right: 32px;
     font-size: 18px;
-    // text-align: center;
+    text-align: center;
 }
 
 .schedule-draft-item {
