--- a/app/scheduler/templates/pb-scheduled-list.html
+++ b/app/scheduler/templates/pb-scheduled-list.html
@@ -10,18 +10,18 @@
                 layout="row" layout-align="start center" title="{{pb.description}}">
                 {{pb.description}}
             </span>
-            <!-- <span class="pb-obs-spec-list-item" style="font-size: 10px; min-width: 200px; max-width:200px" title="{{pb.obs_spec}}">{{pb.obs_spec}}</span> -->
-            <!-- <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin-left: 4px; min-width: 148px">
-                <span>{{pb.desired_lst_start_time}}</span>
-                <span>{{pb.desired_start_time}}</span>
-            </div> -->
+
+            <div ng-show="pb.id > -1" layout="column" layout-align="center" style="position: absolute; top: 2px; right: 120px; font-size: 9px">
+                <span>Desired LST Start Time: {{pb.desired_lst_start_time}}</span>
+                <span>Desired Start Time: {{pb.desired_start_time}}</span>
+            </div>
 
             <div class="pb-schedule-item-header-title" ng-click="$root.showSBDetails(pb, $event, 'Program Block: ' + pb.pb_id)">
                 <span ng-show="pb.id > -1">Program Block - <b>{{pb.pb_id}}</b></span>
                 <b ng-show="!pb.id && pb.id !== 0">{{pb.pb_id}}</b>
             </div>
             <md-menu style="position: absolute; top: 4px; right: 4px">
-                <span class="icon-button fa fa-ellipsis-v" md-ink-ripple ng-click="$mdOpenMenu(); $event.stopPropagation()"></span>
+                <span class="icon-button fa fa-ellipsis-v" md-ink-ripple ng-click="$mdMenu.open($event); $event.stopPropagation()"></span>
                 <md-menu-content style="max-height: 475px">
                     <md-menu-item>
                         <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.directorPriorityDialog(pb, $event)"
@@ -42,6 +42,15 @@
                     <md-menu-item>
                         <md-button ng-click="parent.vm.clonePB(pb, true)" title="Clone Program Block as well as it's Schedule Blocks">
                             Clone PB and it's SB's</md-button>
+                    </md-menu-item>
+                    <md-menu-divider></md-menu-divider>
+                    <md-menu-item>
+                        <md-button ng-disabled="!pb.obs_constraints" ng-click="$root.showSBDetails(pb.obs_constraints, $event, pb.pb_id + ' Observation Constraints')" title="View Observation Constraints">
+                            View Obs Constraints</md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button ng-disabled="!pb.obs_spec" ng-click="$root.showSBDetails(pb.obs_spec, $event, pb.pb_id + ' Observation Spec')" title="View Observation Specification">
+                            View Obs Spec</md-button>
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
