fix grammar in clone PB menu items

--- a/app/scheduler/templates/pb-scheduled-list.html
+++ b/app/scheduler/templates/pb-scheduled-list.html
@@ -37,12 +37,12 @@
                     </md-menu-item>
                     <md-menu-divider></md-menu-divider>
                     <md-menu-item>
-                        <md-button ng-click="parent.vm.clonePB(pb, false)" title="Clone Program Block without it's Schedule Blocks">
+                        <md-button ng-click="parent.vm.clonePB(pb, false)" title="Clone Program Block without its Schedule Blocks">
                             Clone PB only</md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="parent.vm.clonePB(pb, true)" title="Clone Program Block as well as it's Schedule Blocks">
-                            Clone PB and it's SB's</md-button>
+                        <md-button ng-click="parent.vm.clonePB(pb, true)" title="Clone Program Block as well as its Schedule Blocks">
+                            Clone PB and its SB's</md-button>
                     </md-menu-item>
                     <md-menu-divider></md-menu-divider>
                     <md-menu-item>
