added tail log button to each assigned resource

--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-align="center" class="subarray-config-container">
-    <span md-ink-ripple ng-click="parent.vm.showSubarrayAndDataLogs()" class="icon-button fa fa-file-text-o" title="Show Subarray and Data Proxy logs"
+    <span md-ink-ripple ng-click="parent.vm.showSubarrayLogs()" class="icon-button fa fa-file-text-o" title="Show Subarray logs"
         style="font-size: 12px; height: 14px; padding: 2px 4px; opacity: 0.5"></span>
     <md-menu>
         <span ng-disabled="!$root.expertOrLO" title="Control Authority" ng-click="$root.expertOrLO && $mdMenu.open($event)"
