Fix interlock state display subscriptions; now show bottom bar in red when interlock != NONE

--- a/app/app.less
+++ b/app/app.less
@@ -740,6 +740,10 @@ md-chips .md-chip {
     background-color: rgba(244, 67, 54, 0.4) !important;
 }
 
+.interlock-state-error {
+    background-color: #e51c23 !important;
+}
+
 .connection-lost-bg-bright {
     background-color: rgba(244, 67, 54, 1.0) !important;
 }
