updated receptor health, receptor status and operator control to work with nats

--- a/app/app.less
+++ b/app/app.less
@@ -879,3 +879,10 @@ pre {
 md-dialog {
     border-radius: 0 !important;
 }
+
+.opacity-hover {
+    opacity: 0.3;
+    &:hover {
+        opacity: 1.0;
+    }
+}
