updated top health display to work with nats

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -138,13 +138,7 @@
 }
 
 .in-maintenance-child {
-    background-color: #9C27B0 !important;
-    fill: #9C27B0 !important;
-
-    .health-full-item.rect {
-        fill: #9C27B0 !important;
-        stroke: #fff !important;
-    }
+    stroke: #9C27B0 !important;
 
     text {
         stroke: transparent;
