WIP scheduler displays for nats subscribing and some general cleanup and refactoring

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -534,9 +534,9 @@
 }
 
 .maintenance-bg-hover {
-    background-color: rgba(206, 147, 216, 0.3);
+    background-color: rgba(206, 147, 216, 0.3) !important;
     &:hover {
-        background-color: rgba(206, 147, 216, 0.5);
+        background-color: rgba(206, 147, 216, 0.5) !important;
     }
 }
 
