--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -4,7 +4,7 @@
     <md-menu>
         <span ng-disabled="!$root.expertOrLO" title="Control Authority" ng-click="$root.expertOrLO && $mdMenu.open($event)"
             md-ink-ripple>
-             <i>CA: </i><b>{{parent.vm.subarray.delegated_ca}}</b>
+             <i>CA: </i><b>{{vm.subarray.delegated_ca}}</b>
          </span>
         <md-menu-content>
             <md-menu-item>
